--- a/_includes/2-status.html
+++ b/_includes/2-status.html
@@ -1,4 +1,10 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Manhattan, ‌uptown [2] stops at <b>86 St</b></p>Reminder: Late night [2] service operates local in Manhattan
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>3 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>[1][2][3] trains are delayed in both directions while we address a switch problem near <b>96 St</b>.</p>Service Changes
+
+Northbound [2] trains are running via the [5] line from Nevins St to 149 St-Grand Concourse.
+
+Travel Alternatives
+
+As an alternative to [1][2][3] service in Manhattan, consider taking [A][D][E][F] trains, or M5, M7, M20, M55, or M104 buses.</div><div class="line-alert"><p>In Manhattan, ‌uptown [2] stops at <b>86 St</b></p>Reminder: Late night [2] service operates local in Manhattan
 
 What's happening?
 We're making electrical improvements</div><div class="line-alert"><p>In Manhattan, ‌[2] stops at <b>79 St</b> in both directions</p>Reminder: Late night [2] service operates local in Manhattan
