--- a/_includes/R-status.html
+++ b/_includes/R-status.html
@@ -1,1 +1,15 @@
-<h2 class="lead text-success"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-check-circle-fill" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/></svg>Good Service</h2>
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Southbound [N] via [D] line from <b>36 St</b> to <b>Coney Island-Stillwell Av</b>.</p><p>There is no [R] service between <b>36 St</b> and <b>Bay Ridge-95 St</b> in both directions.</p>What's Happening?
+We're working to remove a shopping cart from the tracks near 53 St.
+
+The last stop on southbound [R] trains in Brooklyn will be 36 St or 9 Av (via [D] line).
+Listen for train crew announcements to hear how your train will run.
+
+Travel Alternatives:
+For service to/from stops along the [N] line in Brooklyn, take a northbound train.
+Transfer between southbound and northbound trains at 36 St, New Utrecht Av or Coney Island-Stillwell Av.
+
+For service to/from 45 St or 53 St, take a northbound [N] train. 
+
+For service along the [R] line between Bay Ridge-95 St and 59 St, take B37 or B63 buses making nearby stops.
+
+Expect delays in [N][R] train service in both directions.</div></div>
