--- a/_includes/C-status.html
+++ b/_includes/C-status.html
@@ -1,1 +1,13 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Northbound [C][E] trains are running with delays after removed a train car in need of cleaning from service at <b>W 4 St-Wash Sq</b>.</p></div></div>
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Northbound [C][E] trains are running with delays after removed a train car in need of cleaning from service at <b>W 4 St-Wash Sq</b>.</p></div><div class="line-alert"><p>Southbound [C][E] trains are running express from <b>59 St-Columbus Circle</b>/<b>42 St-Port Authority Bus Terminal</b> to <b>Canal St</b>.</p>What's Happening?
+We're removing a train car in need of cleaning from service at 42 St-Port Authority Bus Terminal.
+NYPD is responding to reports of people being disruptive at 23 St.
+Updates:
+Board southbound [C][E] trains on the express platform at 34 St-Penn Station.
+
+Southbound [C] trains have resumed making local stops from 145 St to 59 St-Columbus Circle after NYPD conducted an investigation at 135 St.
+
+Expect [A][C][E] delays while trains share the express track.
+
+Alternatives:
+At 50 St, take an [E] train on the lower level.
+At all other bypassed local stations, take a northbound train.</div></div>
