--- a/_includes/N-status.html
+++ b/_includes/N-status.html
@@ -1,18 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>3 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Most northbound [Q] trains are running via [D] line from <strong>Coney Island</strong> to <strong>Atlantic Av</strong></p><p>Limited northbound [Q] from <strong>Coney Island</strong> to <strong>Prospect Park.</strong></p>Southbound [Q] trains have resumed making regularly scheduled stops.
-
-What's Happening?
-Emergency teams are assisting someone who was struck by a train at Atlantic Av-Barclays Ctr.
-
-Travel Alternatives:
-For service along the [Q] line in Brooklyn use a soutbound train or:
-Between Coney Island and Church Av: Use the B49 or B68 buses making nearby stops.
-Between Church Av and Atlantic Av: Use the B41 bus.
-
-For service between Brooklyn and Manhattan, use [2][3][4][D][F][N][R] trains.
-For service in Manhattan, use [N][R] trains.
-
-Listen for train crew announcements to hear how your train will operate.
-Expect delays in [D][N][Q][R] train service while they share tracks with rerouted trains.</div><div class="line-alert"><p>In Lower Manhattan and Brooklyn, [N] runs via the [R] in both directions between <b>Atlantic Av-Barclays Ctr</b> and <b>Canal St</b></p>Trains stop at City Hall, Cortlandt St, Rector St, Whitehall St-South Ferry, Court St, Jay St-MetroTech and DeKalb Av.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Lower Manhattan and Brooklyn, [N] runs via the [R] in both directions between <b>Atlantic Av-Barclays Ctr</b> and <b>Canal St</b></p>Trains stop at City Hall, Cortlandt St, Rector St, Whitehall St-South Ferry, Court St, Jay St-MetroTech and DeKalb Av.
 
 Note: At Canal St, [N] trains are stopping at the [R] platform during this time.
 
