--- a/_includes/E-status.html
+++ b/_includes/E-status.html
@@ -1,4 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>World Trade Center-bound [E] runs via the [F] from <b>21 St-Queensbridge</b>, Queens to <b>W 4 St-Wash Sq</b>, Manhattan</p>No World Trade Center-bound [E] service at Queens Plaza, Court Sq-23 St, Lexington Av/53 St, 5 Av/53 St, 7 Av, 50 St, 42 St-Port Authority, 34 St-Penn Station, 23 St and 14 St.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>World Trade Center-bound [E] runs via the [F] from <b>21 St-Queensbridge</b>, Queens to <b>W 4 St-Wash Sq</b>, Manhattan</p>No World Trade Center-bound [E] service at Queens Plaza, Court Sq-23 St, Lexington Av/53 St, 5 Av/53 St, 7 Av, 50 St, 42 St-Port Authority, 34 St-Penn Station, 23 St and 14 St.
 
 Travel Alternatives:
 For Queens Plaza, take the [R] until 10:45 PM or use the nearby Queensboro Plaza [7][N] station.
@@ -24,4 +24,11 @@ W 4 St-Wash Sq [A][E][F]
 What's happening?
 Escalator replacement
 
-accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div></div>
+accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div><div class="line-alert"><p>In Queens, Manhattan-bound [E][F] local skip <b>65 St</b>, <b>Northern Blvd</b>, <b>46 St</b>, <b>Steinway St</b> and <b>36 St</b></p>For service to these stations, take the [E] * or [F] to 21 St-Queensbridge and transfer to a Jamaica-bound local train.
+
+For service from these stations, take a train to Roosevelt Av and transfer to a Manhattan-bound [E] or [F].
+
+*Manhattan-bound [E] runs via the [F] from 21 St-Queensbridge to W 4 St-Wash Sq. 
+
+What's happening?
+Track maintenance</div></div>
