--- a/_includes/L-status.html
+++ b/_includes/L-status.html
@@ -1,1 +1,30 @@
-<h2 class="lead text-success"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-check-circle-fill" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/></svg>Good Service</h2>
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Brooklyn and Manhattan, no [L] between <b>Myrtle-Wyckoff Avs</b> and <b>8 Av</b></p>[L] runs between Rockaway Pkwy and Myrtle-Wyckoff Avs every 8 minutes days and evenings.
+
+In Brooklyn, shuttle bus icon free shuttle buses run along two routes:
+1. Between Lorimer St and Myrtle-Wyckoff Avs [L][M]
+2. Loop shuttle bus icon bus stopping at Lorimer St, Bedford Av, Marcy Av [J][M], Hewes St [J][M] and Broadway [G]
+In Manhattan, free L92 shuttle buses provide additional M14A-SBS service between 8 Av and Delancey St-Essex St.
+
+When exiting at stations along 14 St in Manhattan and at Lorimer St, Marcy Av, Broadway [G], or Myrtle-Wyckoff Avs, get a GO Ticket for re-entry into the subway.
+
+On Saturday from 8 AM to 11:59 PM and Sunday from 8 AM to 9 PM, special [M] service runs between Metropolitan Av and the 96 St [Q] station, connecting with the [L] at Myrtle-Wyckoff Avs accessibility icon and the M14A/D-SBS at 6 Av/14 St.
+
+Travel Alternatives:
+For service between Manhattan and Brooklyn, take the [A][C][J] or [M].
+
+For 8 Av, 6 Av, 14 St-Union Sq, 3 Av and 1 Av, take the M14A/D-SBS or L92.
+
+Transfer Stations:
+Broadway Junction [A][C][J][L]
+Myrtle-Wyckoff Avs accessibility icon | shuttle bus icon [L][M]
+Lorimer St accessibility icon | shuttle bus icon [G]
+Marcy Av shuttle bus icon [J][M]
+Delancey St-Essex St [F][J][M], M14A-SBS/L92
+6 Av/14 St [F][M], M14A/D-SBS/L92
+8 Av/14 St [A][C], M14A/D-SBS/L92
+Court Sq-23 St accessibility icon (7G & southbound E) | [7][E][G]
+
+What's happening?
+Track maintenance
+
+accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div></div>
