--- a/_includes/F-status.html
+++ b/_includes/F-status.html
@@ -1,7 +1,23 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Passageway between <b>14 St</b> [1][2][3] and <b>14 St</b> [F][M] stations is closed</p>Free OMNY/MetroCard out-of-station transfer is available between 7 Av and 6 Av.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>3 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Passageway between <b>14 St</b> [1][2][3] and <b>14 St</b> [F][M] stations is closed</p>Free OMNY/MetroCard out-of-station transfer is available between 7 Av and 6 Av.
 Exit the station, walk along 14 St, and swipe/tap back in to transfer to your next train.
 
 Note: No [L] service in Manhattan during this time, and special [M] service operates days and evenings in Manhattan.
 
 What's happening?
-We're making accessibility improvements</div></div>
+We're making accessibility improvements</div><div class="line-alert"><p>In Queens, Manhattan-bound [E][F] local skip<strong> </strong><b>67 Av</b>‌, <b>63 Dr-Rego Park</b>, <b>Woodhaven Blvd</b>, <b>Grand Av-Newtown</b> and <b>Elmhurst Av</b></p>For service to these stations, take the [E] or [F] to Jackson Hts-Roosevelt Av and transfer to a Jamaica-bound local [E] or [F].
+
+For service from these stations, take the [E] or [F] to Forest Hills-71 Av and transfer to a Manhattan-bound [E] or [F].
+
+Schedule reminder: [E][F] does not serve these local stations days and evenings.
+
+What's happening?
+We're making station improvements</div><div class="line-alert"><p>In Brooklyn, Coney Island-bound [F] and Church Av-bound [G] skip <b>4 Av-9 St</b>, <b>15 St-Prospect Park</b> and <b>Fort Hamilton Pkwy</b></p>For service to these stations, take the [F] or [G] to 7 Av or Church Av and transfer to a Manhattan-bound [F] or Court Sq-bound [G].
+
+For service from these stations, take the [F] or [G] to 7 Av or Smith-9 Sts and transfer to a Coney Island-bound [F] or Church Av-bound [G].
+
+Travel tips:
+To 4 Av-9 St, take the [R] via transfer at Jay St-MetroTech [F].
+From 15 St-Prospect Park or Fort Hamilton Pkwy, consider the B68 bus on Prospect Park Southwest.
+
+What's happening?
+Electrical maintenance</div></div>
