--- a/_includes/6-status.html
+++ b/_includes/6-status.html
@@ -1,4 +1,13 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Manhattan, uptown [6] runs express from <b>14 St-Union Sq</b> to <b>125 St</b></p>Trains stop at Grand Central-42 St, 59 St and 86 St.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In the Bronx, Pelham Bay Park-bound [6] runs express from <b>Hunts Point Av</b> to <b>Pelham Bay Park</b></p>Trains stop at Parkchester.
+
+For service to Whitlock Av, Elder Av, Morrison Av-Soundview and St Lawrence Av, take the [6] to Parkchester and transfer to a Manhattan-bound [6].
+
+For service to Castle Hill Av, Zerega Av, Westchester Sq-E Tremont Av, Middletown Rd and Buhre Av, take the [6] to Pelham Bay Park and transfer to a Manhattan-bound [6].
+
+For service from these stations, take the [6] to Parkchester or Hunts Point Av and transfer to a Pelham Bay Park-bound [6].
+
+What's happening?
+We're replacing tracks and making station improvements</div><div class="line-alert"><p>In Manhattan, uptown [6] runs express from <b>14 St-Union Sq</b> to <b>125 St</b></p>Trains stop at Grand Central-42 St, 59 St and 86 St.
 
 For service to 23 St, 28 St and 33 St, take the [6] to Grand Central-42 St accessibility icon and transfer to downtown [4] or local [6].
 
