--- a/_includes/D-status.html
+++ b/_includes/D-status.html
@@ -1,7 +1,10 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>3 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Transfers between the ‌[4] and [B][D] at <b>161 St-Yankee Stadium</b> will be made out-of-station via the street using OMNY or MetroCard</p>Exit and re-enter the station and turnstiles for free with your OMNY or MetroCard.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>4 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Transfers between the ‌[4] and [B][D] at <b>161 St-Yankee Stadium</b> will be made out-of-station via the street using OMNY or MetroCard</p>Exit and re-enter the station and turnstiles for free with your OMNY or MetroCard.
 
 What's happening?
-We're replacing the stairs and escalators between the [4] and [B][D] mezzanines</div><div class="line-alert"><p>In the Bronx, uptown [D] skips <b>170 St</b> and <b>174-175 Sts</b></p>For service to these stations, take the [D] to Tremont Av and transfer to a downtown [D].
+We're replacing the stairs and escalators between the [4] and [B][D] mezzanines</div><div class="line-alert"><p>In Brooklyn, Manhattan-bound [D] runs local from <b>36 St</b> to <b>DeKalb Av</b></p>Schedule reminder: Late night [D] also runs local between these stations.
+
+What's happening?
+Structural maintenance</div><div class="line-alert"><p>In the Bronx, uptown [D] skips <b>170 St</b> and <b>174-175 Sts</b></p>For service to these stations, take the [D] to Tremont Av and transfer to a downtown [D].
 
 For service from these stations, take the [D] to 167 St and transfer to an uptown [D].
 
