--- a/_includes/2-status.html
+++ b/_includes/2-status.html
@@ -1,4 +1,16 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Passageway between <b>14 St</b> [1][2][3] and <b>14 St</b> [F][M] stations is closed</p>Free OMNY/MetroCard out-of-station transfer is available between 7 Av and 6 Av.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>3 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>[4][5] trains are delayed in both directions while we investigate what caused a train's brakes to activate near <b>125 St</b>.</p>Service Changes
+
+Southbound [5] trains are running on the [2] line from 149 St-Grand Concourse to Rector St.
+
+The last stop on southbound [4] trains will be 149 St-Grand Concourse where they will turn back for northbound service.
+
+Expect delays on southbound [2] trains while they share the track with rerouted trains.
+
+Travel Alternatives
+
+As an alternative for service along the East Side, take local [6] trains or local bus service.
+
+Expect delays on [4][5] trains in both directions.</div><div class="line-alert"><p>Passageway between <b>14 St</b> [1][2][3] and <b>14 St</b> [F][M] stations is closed</p>Free OMNY/MetroCard out-of-station transfer is available between 7 Av and 6 Av.
 Exit the station, walk along 14 St, and swipe/tap back in to transfer to your next train.
 
 Note: No [L] service in Manhattan during this time, and special [M] service operates days and evenings in Manhattan.
