--- a/_includes/2-status.html
+++ b/_includes/2-status.html
@@ -1,4 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Brooklyn, Atlantic Av-bound [2] skips <strong>Eastern Pkwy</strong>, <b>Grand Army Plaza</b> and <b>Bergen St</b> - take the [4] instead</p>Transfer between trains at Franklin Av
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>3 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Brooklyn, Atlantic Av-bound [2] skips <strong>Eastern Pkwy</strong>, <b>Grand Army Plaza</b> and <b>Bergen St</b> - take the [4] instead</p>Transfer between trains at Franklin Av
 Note: [2] is not running to Manhattan overnight.
 
 What's happening?
@@ -22,4 +22,14 @@ Atlantic Av-Barclays Ctr accessibility icon | [2][4][N][Q]
 What's happening?
 Monthly track maintenance
 
-accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div></div>
+accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div><div class="line-alert"><p>Downtown [1] and local [2] skips <b>86 St</b></p>Use nearby 96 St or 79 St.
+
+Additional travel alternatives:
+For service to this station, take the [1] or [2] to 72 St and transfer to a uptown [1] or [2] local.
+
+For service from this station, take an uptown [1] or [2] to 96 St and transfer to a downtown train.
+
+Schedule reminder: [2] runs local in Manhattan only during late nights.
+
+What's happening?
+Structural maintenance</div></div>
