--- a/_includes/E-status.html
+++ b/_includes/E-status.html
@@ -1,11 +1,9 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Northbound [C] trains are running express from <b>Canal St</b> to <b>59 St-Columbus Circle</b>. Some northbound [E] trains are running express from <b>Canal St</b> to <strong>42 St</strong>.</p>What's happening?
-We are addressing a signal problem near Spring St.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Northbound [A][C][E] trains are running with delays after we addressed a signal problem near <b>Spring St</b>.</p>Northbound [C][E] trains have resumed making local stops in Manhattan.
 
-Listen to train crew announcements on board your [E] train to hear if it will run express.
-
-At 34 St-Penn Station, board northbound [C] trains and some northbound [E] trains on the middle [A] platform.
-
-Expect delays in northbound [A][C][E] train service.</div><div class="line-alert"><p>Manhattan-bound [E] runs via [F] from <b>36 St</b>, Queens to <b>2 Av</b>, Manhattan</p><p>No [E] between <b>W 4 St-Wash Sq</b> and <b>World Trade Center</b></p>No World Trade Center-bound [E] service at Queens Plaza, Court Sq-23 St, Lexington Av/53 St, 5 Av/53 St, 7 Av, 50 St, 42 St-Port Authority, 34 St-Penn Station, 23 St, and 14 St.
+Planned Work Reminders:
+Tonight, while we modernize signals:
+Manhattan-bound [E] runs via [F] from 36 St, Queens to 2 Av, Manhattan
+No [E] between W 4 St-Wash Sq and World Trade Center</div><div class="line-alert"><p>Manhattan-bound [E] runs via [F] from <b>36 St</b>, Queens to <b>2 Av</b>, Manhattan</p><p>No [E] between <b>W 4 St-Wash Sq</b> and <b>World Trade Center</b></p>No World Trade Center-bound [E] service at Queens Plaza, Court Sq-23 St, Lexington Av/53 St, 5 Av/53 St, 7 Av, 50 St, 42 St-Port Authority, 34 St-Penn Station, 23 St, and 14 St.
 
 Queens-bound [E] runs via the [F] from 2 Av to W 4 St-Wash Sq and resumes regular service.
 
